force-app/main/default/objects/Project_Status__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>