force-app/main/default/objects/Project_Status__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>