force-app/main/default/objects/Project_Status__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project Statuses</relationshipLabel>
    <relationshipName>Project_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>