force-app/main/default/objects/Project_Status__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Sub_Project__c</referenceTo>
    <relationshipLabel>Project Statuses</relationshipLabel>
    <relationshipName>Project_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>